--- a/panel/panel.css
+++ b/panel/panel.css
@@ -1,50 +1,255 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  color: #333;
-  background-color: #fff;
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
 
-.HiddenSprite {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  opacity: .01;
+:root {
+  overflow: hidden;
+  height: 100%;
+  /* 12px with default settings */
+  font-size: 75%;
+
+  --full-image: 240px;
+  --text-base: #333;
+  --accent-text: #fff;
+  --accent-background: #3A8AD3;
+  --accent-dim-background: #D9DBDE;
+  --background-base: #fff;
+  --background-darker1: #FBFBFB;
+  --background-darker2: #f0f0f0;
+  --background-list: #ccc;
+  --border-color-main: #e6e6e6;
+}
+
+body {
+  display: flex;
+  height: 100%;
+  align-items: stretch;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  color: var(--text-base);
+  background-color: var(--background-base);
+}
+
+main {
+  height: 100%;
+  flex-grow: 1;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.Toolbar-styles svg {
+  fill: var(--svg-fill);
+  stroke: var(--svg-stroke);
+}
+
+.svgWrapper > svg {
+  fill: var(--svg-fill);
+  stroke: var(--svg-stroke);
+}
+
+.Sidebar {
+  box-sizing: content-box;
+  flex: 0 0 calc(var(--full-image) + 12px);
+  border: solid var(--border-color-main);
+  border-width: 0 0 0 1px;
+  background-color: var(--background-base);
+}
+
+.Sidebar[hidden] {
+  display: none;
+}
+
+@media (orientation: landscape) and (max-width: 540px) {
+  :root {
+    --full-image: 160px;
+  }
+}
+
+@media (orientation: portrait) {
+  body {
+    flex-direction: column;
+  }
+  .Sidebar {
+    border-width: 1px 0 0;
+  }
+}
+
+.Toolbar {
+  display: flex;
+  padding: 2px 4px;
+  border-bottom: solid 1px var(--border-color-main);
+  background-color: var(--background-darker1);
+}
+
+.Toolbar-styles {
+  display: flex;
+  margin-left: auto;
+}
+
+.Toolbar-styles span {
+  display: inline-block;
+  padding: 4px 6px;
+  line-height: 1;
+}
+
+.Toolbar-styles button {
+  padding: 2px 4px;
+  border: none;
+  border-radius: 3px;
+  line-height: 1;
+  background: transparent;
+}
+
+.Toolbar-styles button[aria-selected="true"] {
+  background-color: var(--accent-dim-background);
+}
+
+.Toolbar-styles svg {
+  vertical-align: top;
+}
+
+.Content-placeholder {
+  padding: 40vh 20px;
+  text-align: center;
+}
+
+.Content-placeholder:not(:only-child) {
+  display: none;
 }
 
 .Header {
+  display: flex;
+  align-items: baseline;
   margin: 0;
-  padding: .5em;
-  font-size: 16px;
-  font-weight: normal;
-  background-color: #eee;
+  padding: 6px;
+  font: inherit;
+  line-height: 1;
+  background-color: var(--background-darker1);
+  border: solid var(--border-color-main);
+  border-width: 1px 0;
+}
+
+section:first-child .Header {
+  border-top-width: 0;
+}
+
+.Header > span {
+  white-space: nowrap;
+}
+
+.Header-type {
+  margin-right: 1em;
+}
+
+.Header-url {
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
+  font-family: monospace, monospace;
+  font-size: .9rem;
+  opacity: .75;
 }
 
 .ImageList {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   margin: 0;
-  padding: 10px;
+  padding: 4px;
 }
 
 .ImageList > li {
-  position: relative;
-  width: 100px;
-  margin: 5px;
+  margin: 2px;
   list-style: none;
 }
 
-.ImageList > li > svg {
-  width: 100px;
-  height: 100px;
-  vertical-align: top;
-  outline: solid 1px limegreen;
+.ImageList-icon {
+  border: solid 1px rgba(0,0,0,.05);
 }
 
-.ImageList > li > span {
-  display: block;
-  margin-top: .5em;
-  font-family: monospace, monospace;
-  font-size: 12px;
-  color: #666;
+.ImageList-icon.selected {
+  border-color: var(--accent-background);
+  background-color: var(--accent-dim-background);
+}
+
+.ImageList-icon > svg {
+  width: 48px;
+  height: 48px;
+  vertical-align: top;
+}
+
+.ImageFull {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 0;
+}
+
+.ImageFull-frame {
+  position: relative;
+  flex-grow: 0;
+  flex-shrink: 1;
+  width: calc(var(--full-image) + 12px);
+  height: calc(var(--full-image) + 12px);
+  overflow: hidden;
+  padding: 6px;
+  color: #000;
+  background-color: #fafafa;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="rgb(238,238,238)" width="24" height="24"><rect x="0" y="0" width="12" height="12"></rect><rect x="12" y="12" width="12" height="12"></rect></svg>');
+  background-size: 24px 24px;
+  background-position: -6px -6px;
+  fill: url("#devtools-svg-gradient1");
+}
+
+.ImageFull-frame::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border: solid 1px var(--accent-background);
+  opacity: .5;
+}
+
+.ImageFull-frame > svg {
+  width: var(--full-image);
+  height: var(--full-image);
+  vertical-align: top;
+}
+
+.ImageFull-info {
+  flex-grow: 1;
+}
+
+.ImageFull-info table {
+  width: 100%;
+  margin: 0;
+  border-collapse: collapse;
+}
+
+.ImageFull-info td {
+  padding: 2px 6px;
+  border: solid 1px var(--border-color-main);
+}
+
+.ImageFull-info td:first-child {
+  width: 5em;
+  border-left: none;
+}
+
+.ImageFull-info td:last-child {
+  border-right: none;
+}
+
+@media (orientation: portrait) {
+  .ImageFull {
+    flex-direction: row;
+  }
+  .ImageFull-frame {
+    max-width: 50%;
+  }
 }
